--- a/app/src/main/res/layout/activity_visualizacion_tiendas_view.xml
+++ b/app/src/main/res/layout/activity_visualizacion_tiendas_view.xml
@@ -87,7 +87,7 @@
         android:rating="0" />
 
     <TextView
-        android:id="@+id/textView15"
+        android:id="@+id/tvDescripcionTienda"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ratingBar"
@@ -104,7 +104,7 @@
         android:id="@+id/textView16"
         android:layout_width="176dp"
         android:layout_height="51dp"
-        android:layout_below="@+id/textView15"
+        android:layout_below="@+id/tvDescripcionTienda"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_marginStart="20dp"
@@ -124,6 +124,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:drawableEnd="@android:drawable/ic_dialog_map"
+        android:onClick="goToMap"
         android:text="@string/localizacion"
         android:textSize="18dp"
         app:backgroundTint="#1C8AAC"
