--- a/app/src/main/res/layout/activity_visualizacion_tiendas_view.xml
+++ b/app/src/main/res/layout/activity_visualizacion_tiendas_view.xml
@@ -138,11 +138,11 @@
         android:layout_marginTop="23dp">
 
         <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="384dp"
+            android:layout_height="283dp"
+            android:layout_marginBottom="84dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent">
 
             <androidx.cardview.widget.CardView
@@ -178,7 +178,8 @@
                             android:layout_gravity="center_vertical"
                             android:layout_marginBottom="15dp"
                             android:gravity="center_vertical"
-                            android:text="TextView" />
+                            android:text="TextView"
+                            android:textSize="16sp" />
 
                         <TextView
                             android:id="@+id/tvDescripcionProductoCardVIEW"
@@ -186,7 +187,8 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:gravity="center_vertical"
-                            android:text="TextView" />
+                            android:text="TextView"
+                            android:textSize="16sp" />
 
                     </LinearLayout>
 
@@ -197,6 +199,18 @@
 
 
         </ScrollView>
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="104dp"
+            android:layout_marginRight="104dp"
+            android:layout_marginBottom="36dp"
+            android:drawableRight="@drawable/carro"
+            android:text="Agregar al carrito"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
