--- a/app/src/main/res/layout/activity_visualizacion_tiendas_view.xml
+++ b/app/src/main/res/layout/activity_visualizacion_tiendas_view.xml
@@ -190,6 +190,14 @@
                             android:text="TextView"
                             android:textSize="16sp" />
 
+                        <TextView
+                            android:id="@+id/precioProductoView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="TextView"
+                            android:layout_marginTop="14dp"
+                            android:layout_marginBottom="10dp"/>
+
                     </LinearLayout>
 
 
