Se hicieron cambios en el layout de VisualizacionTiendasView, y el Activity Carrito de compras

--- a/app/src/main/res/layout/activity_carrito_de_compras_view.xml
+++ b/app/src/main/res/layout/activity_carrito_de_compras_view.xml
@@ -6,4 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".CarritoDeComprasView">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="408dp"
+        android:layout_height="505dp"
+        tools:layout_editor_absoluteX="2dp"
+        tools:layout_editor_absoluteY="2dp" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteX="248dp"
+        tools:layout_editor_absoluteY="574dp" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteX="103dp"
+        tools:layout_editor_absoluteY="574dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
