--- a/app/src/main/res/layout/activity_visualizacion_tiendas_view.xml
+++ b/app/src/main/res/layout/activity_visualizacion_tiendas_view.xml
@@ -176,6 +176,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
+                            android:layout_margin="10dp"
                             android:layout_marginBottom="15dp"
                             android:gravity="center_vertical"
                             android:text="TextView"
@@ -186,6 +187,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
+                            android:layout_margin="10dp"
                             android:gravity="center_vertical"
                             android:text="TextView"
                             android:textSize="16sp" />
@@ -194,9 +196,11 @@
                             android:id="@+id/precioProductoView"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="TextView"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginLeft="10dp"
                             android:layout_marginTop="14dp"
-                            android:layout_marginBottom="10dp"/>
+                            android:layout_marginBottom="20dp"
+                            android:text="TextView" />
 
                     </LinearLayout>
 
