--- a/app/src/main/res/layout/activity_visualizacion_tiendas_view.xml
+++ b/app/src/main/res/layout/activity_visualizacion_tiendas_view.xml
@@ -213,7 +213,7 @@
         </ScrollView>
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/btnCarritoCompras"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="104dp"
