--- a/app/src/main/res/layout/modelo_card_view.xml
+++ b/app/src/main/res/layout/modelo_card_view.xml
@@ -26,9 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:orientation="vertical"
-            android:layout_margin="10dp"
-            >
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tvNombreDelProducto"
@@ -40,7 +38,7 @@
 
             <TextView
                 android:id="@+id/tvDescripcionProducto"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:ems="10"
@@ -55,7 +53,5 @@
                 android:text="PrecioProducto"
                 android:textSize="16dp"/>
         </LinearLayout>
-
-
     </LinearLayout>
 </androidx.cardview.widget.CardView>
