--- a/app/src/main/res/layout/activity_carrito_de_compras_view.xml
+++ b/app/src/main/res/layout/activity_carrito_de_compras_view.xml
@@ -20,7 +20,8 @@
         android:layout_marginTop="68dp"
         android:layout_marginEnd="80dp"
         android:layout_marginRight="80dp"
-        android:text="Button"
+        android:onClick="limpiarCarrito"
+        android:text="Limpiar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recyclerViewCarrito" />
 
@@ -31,7 +32,7 @@
         android:layout_marginStart="64dp"
         android:layout_marginLeft="64dp"
         android:layout_marginTop="68dp"
-        android:text="Button"
+        android:text="Comprar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recyclerViewCarrito" />
 </androidx.constraintlayout.widget.ConstraintLayout>
