--- a/app/src/main/res/layout/activity_visualizacion_tiendas_view.xml
+++ b/app/src/main/res/layout/activity_visualizacion_tiendas_view.xml
@@ -9,17 +9,18 @@
 
     <ImageView
         android:id="@+id/imageTienda"
-        android:layout_width="wrap_content"
-        android:layout_height="192dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="36dp"
         android:layout_marginLeft="36dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="80dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@drawable/ic_launcher_foreground" />
+
 
     <View
         android:id="@+id/divider2"
@@ -29,7 +30,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginStart="17dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="72dp"
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:background="#090909"
@@ -55,7 +56,7 @@
         tools:layout_editor_absoluteX="238dp" />
 
     <TextView
-        android:id="@+id/NombreTienda"
+        android:id="@+id/nombreTienda"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -78,9 +79,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/NombreTienda"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginLeft="23dp"
+        android:layout_marginTop="103dp"
         android:layout_toEndOf="@+id/divider4"
         android:layout_toRightOf="@+id/divider4"
         android:numStars="5"
@@ -101,9 +102,9 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/textView16"
+        android:id="@+id/descTienda"
         android:layout_width="176dp"
-        android:layout_height="51dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/tvDescripcionTienda"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
@@ -122,7 +123,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/divider2"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:drawableEnd="@android:drawable/ic_dialog_map"
         android:onClick="goToMap"
         android:text="@string/localizacion"
@@ -216,9 +217,9 @@
             android:id="@+id/btnCarritoCompras"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="104dp"
-            android:layout_marginRight="104dp"
-            android:layout_marginBottom="36dp"
+            android:layout_marginEnd="88dp"
+            android:layout_marginRight="88dp"
+            android:layout_marginBottom="28dp"
             android:drawableRight="@drawable/carro"
             android:text="Agregar al carrito"
             app:layout_constraintBottom_toBottomOf="parent"
