--- a/app/src/main/res/layout/activity_carrito_de_compras_view.xml
+++ b/app/src/main/res/layout/activity_carrito_de_compras_view.xml
@@ -20,8 +20,7 @@
         android:layout_marginTop="68dp"
         android:layout_marginEnd="80dp"
         android:layout_marginRight="80dp"
-        android:onClick="limpiarCarrito"
-        android:text="Limpiar"
+        android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recyclerViewCarrito" />
 
@@ -32,7 +31,7 @@
         android:layout_marginStart="64dp"
         android:layout_marginLeft="64dp"
         android:layout_marginTop="68dp"
-        android:text="Comprar"
+        android:text="Button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recyclerViewCarrito" />
 </androidx.constraintlayout.widget.ConstraintLayout>
