--- a/app/src/main/res/layout/activity_visualizacion_tiendas_view.xml
+++ b/app/src/main/res/layout/activity_visualizacion_tiendas_view.xml
@@ -78,10 +78,10 @@
         style="@style/Widget.AppCompat.RatingBar.Indicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/NombreTienda"
+        android:layout_below="@+id/nombreTienda"
         android:layout_marginStart="23dp"
         android:layout_marginLeft="23dp"
-        android:layout_marginTop="103dp"
+        android:layout_marginTop="10dp"
         android:layout_toEndOf="@+id/divider4"
         android:layout_toRightOf="@+id/divider4"
         android:numStars="5"
@@ -148,7 +148,7 @@
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_margin="15dp"
                 android:layout_marginTop="5dp"
                 android:orientation="vertical">
@@ -163,7 +163,7 @@
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:layout_gravity="center"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="70dp"
                         android:layout_marginBottom="15dp"
                         tools:srcCompat="@drawable/ic_launcher_foreground" />
 
@@ -227,7 +227,6 @@
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 
 </RelativeLayout>
