--- a/app/src/main/res/layout/activity_registro_view.xml
+++ b/app/src/main/res/layout/activity_registro_view.xml
@@ -12,7 +12,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#CFC9C9"
+        android:background="@drawable/descarga"
         android:orientation="vertical">
 
         <TextView
@@ -22,7 +22,7 @@
             android:layout_margin="15dp"
             android:gravity="center"
             android:text="@string/txvIntroduceElNombreyApellido"
-            android:textColor="#03A9F4"
+            android:textColor="#010101"
             android:textSize="20sp" />
 
         <EditText
