--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
-        android:background="#9200FFF7"
+        android:background="@drawable/backgraundsalesinstantly"
         app:layout_constraintBottom_toTopOf="@+id/txe_correo_usuario"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,6 +34,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
+        android:layout_marginBottom="30dp"
         android:ems="10"
         android:gravity="center"
         android:hint="@string/TxeUsuarioCorreoelectronico"
@@ -53,6 +54,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
+        android:layout_marginBottom="40dp"
         android:ems="10"
         android:gravity="center"
         android:hint="@string/TxeContraseña"
@@ -76,6 +78,7 @@
         android:textColor="#010101"
         android:textSize="20sp"
         app:backgroundTint="#CFC9C9"
+        android:layout_marginBottom="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView7" />
