--- a/app/src/main/res/layout/activity_perfil_usuario_view.xml
+++ b/app/src/main/res/layout/activity_perfil_usuario_view.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/descarga__1_"
     tools:context=".PerfilUsuarioView">
 
     <EditText
         android:id="@+id/eCiudad"
+        android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_below="@+id/eNombre"
@@ -27,62 +28,67 @@
 
     <TextView
         android:id="@+id/textView14"
+        android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:gravity="center"
         android:layout_below="@+id/textView13"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_marginStart="22dp"
         android:layout_marginLeft="22dp"
         android:layout_marginTop="22dp"
+        android:gravity="center"
         android:text="Fecha de nacimiento:"
         android:textSize="20sp" />
 
     <TextView
         android:id="@+id/textView13"
+        android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:gravity="center"
         android:layout_below="@+id/textView12"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_marginStart="22dp"
         android:layout_marginLeft="22dp"
         android:layout_marginTop="22dp"
+        android:gravity="center"
         android:text="Telefono:"
         android:textSize="20sp" />
 
     <TextView
         android:id="@+id/textView12"
+        android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:gravity="center"
         android:layout_below="@+id/textView11"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_marginStart="22dp"
         android:layout_marginLeft="22dp"
         android:layout_marginTop="22dp"
+        android:gravity="center"
         android:text="Correo:"
         android:textSize="20sp" />
 
     <TextView
         android:id="@+id/textView11"
+        android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:gravity="center"
         android:layout_below="@+id/textView10"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_marginStart="22dp"
         android:layout_marginLeft="22dp"
         android:layout_marginTop="22dp"
+        android:gravity="center"
         android:text="Direccion:"
         android:textSize="20sp" />
 
     <TextView
         android:id="@+id/textView10"
+        android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_below="@+id/textView8"
@@ -97,11 +103,11 @@
 
     <ImageButton
         android:id="@+id/btnCircle"
-        android:layout_width="180dp"
-        android:layout_height="180dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="49dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/btn_img_perfil"
         android:src="@drawable/ic_btn_perfil" />
 
@@ -109,14 +115,15 @@
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:gravity="center"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="22dp"
         android:layout_marginLeft="22dp"
-        android:layout_marginTop="287dp"
+        android:layout_marginTop="180dp"
+        android:gravity="center"
         android:text="Nombre:"
+        android:textColor="@color/white"
         android:textSize="20sp" />
 
     <EditText
@@ -128,20 +135,21 @@
         android:layout_alignParentRight="true"
         android:layout_marginStart="68dp"
         android:layout_marginLeft="68dp"
-        android:layout_marginTop="287dp"
+        android:layout_marginTop="180dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:layout_toEndOf="@+id/textView8"
         android:layout_toRightOf="@+id/textView8"
         android:ems="10"
         android:gravity="center"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:textColor="@color/white" />
 
     <EditText
         android:id="@+id/eDireccion"
+        android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:gravity="center"
         android:layout_below="@+id/eCiudad"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
@@ -153,13 +161,14 @@
         android:layout_toEndOf="@+id/textView8"
         android:layout_toRightOf="@+id/textView8"
         android:ems="10"
+        android:gravity="center"
         android:inputType="textPostalAddress" />
 
     <EditText
         android:id="@+id/eCorreo"
+        android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:gravity="center"
         android:layout_below="@+id/eDireccion"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
@@ -171,13 +180,14 @@
         android:layout_toEndOf="@+id/textView8"
         android:layout_toRightOf="@+id/textView8"
         android:ems="10"
+        android:gravity="center"
         android:inputType="textEmailAddress" />
 
     <EditText
         android:id="@+id/eTelefono"
+        android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:gravity="center"
         android:layout_below="@+id/eCorreo"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
@@ -189,6 +199,7 @@
         android:layout_toEndOf="@+id/textView8"
         android:layout_toRightOf="@+id/textView8"
         android:ems="10"
+        android:gravity="center"
         android:inputType="phone" />
 
 
@@ -197,7 +208,6 @@
         style="?android:spinnerStyle"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:gravity="center"
         android:layout_below="@+id/eTelefono"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
@@ -209,6 +219,7 @@
         android:layout_toEndOf="@+id/textView14"
         android:layout_toRightOf="@+id/textView14"
         android:ems="10"
+        android:gravity="center"
         android:hint="@string/txeIntroduceFechaNacimiento"
         android:inputType="date"
         android:onClick="openDatePicker"
@@ -223,6 +234,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp"
-        android:text="Editar" />
+        android:text="Editar"
+        app:backgroundTint="#152A8D" />
 
 </RelativeLayout>
