--- a/app/src/main/res/layout/modelo_card_view.xml
+++ b/app/src/main/res/layout/modelo_card_view.xml
@@ -6,13 +6,14 @@
     android:layout_height="wrap_content"
     android:layout_margin="20dp"
     app:cardElevation="10dp"
-    app:cardCornerRadius="5dp">
+    app:cardCornerRadius="5dp"
+    app:cardBackgroundColor="#474646">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"        >
 
         <ImageView
             android:id="@+id/imageViewTiendas"
